[package]
name = "complex-learned-controls"
version = "0.1.0"
authors = ["Alice Cecile <alice.i.cecile@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy", branch = "main"}
bevy-tick-timers = "0.1.1"
bevy_prototype_lyon = {git = "https://github.com/Nilirad/bevy_prototype_lyon", rev = "69ccfef3baa99f5b977f476a68f9f323f99f2eaa"}
itertools = "0.10"